# ReWatch

./: .gitignore  CMakeLists.txt  README.md  ToDo.txt
include/core/: AppStorage.hpp  AppUtils.hpp  ImportedFileValidator.hpp  LibraryUpdate.hpp  LibraryUpdateController.hpp  OmdbSearch.hpp  SeasonUpdate.hpp  SeasonUpdateController.hpp  Title.hpp
include/ui/: AssetsPaths.hpp  HelpDialog.hpp  LibraryView.hpp  MainWindow.hpp  NotificationsCenter.hpp  RankingView.hpp  SearchResults.hpp  SettingsWindow.hpp  TitleCard.hpp  TitleDetailView.hpp  TopBar.hpp
include/ui/bars/: AddBar.hpp  AppMenuBar.hpp  LibraryViewTopBar.hpp  TopBar.hpp
include/ui/buttons/: HoverButton.hpp  IconButton.hpp  IconTextButton.hpp  StreamingPlatformButton.hpp  TextButton.hpp
include/ui/misc/: AddStreamingPlatformDialog.hpp  ElidedLabel.hpp  ErrorCard.hpp  ErrorMessages.hpp  FlowWidget.hpp  HelpItems.hpp  SearchBar.hpp  Spinner.hpp  StyledDialog.hpp
include/utils/: AppPaths.hpp  AssetsPaths.hpp  ColorPalette.hpp  JsonFileIO.hpp  Levenshtein.hpp  Palette.hpp  SortEnums.hpp  SvgUtils.hpp
scripts/: bundle.sh  format.sh  removedebug.sh  run.sh  test.sh
src/: main.cpp
src/core/: AppStorage.cpp  AppUtils.cpp  ImportedFileValidator.cpp  LibraryUpdate.cpp  LibraryUpdateController.cpp  OmdbSearch.cpp  SeasonUpdate.cpp  SeasonUpdateController.cpp  TitleSearch.cpp
src/ui/: AddBar.cpp  HelpDialog.cpp  LibraryView.cpp  MainWindow.cpp  NotificationsCenter.cpp  RankingView.cpp  SearchResults.cpp  SettingsWindow.cpp  TextButton.cpp  TitleCard.cpp  TitleDetailView.cpp  TopBar.cpp
src/ui/bars/: AddBar.cpp  AppMenuBar.cpp  LibraryViewTopBar.cpp  TopBar.cpp
src/ui/buttons/: HoverButton.cpp  IconButton.cpp  IconTextButton.cpp  StreamingPlatformButton.cpp  TextButton.cpp
src/ui/misc/: AddStreamingPlatformDialog.cpp  ElidedLabel.cpp  ErrorCard.cpp  FlowWidget.cpp  SearchBar.cpp  Spinner.cpp
src/utils/: JsonFileIO.cpp  SvgUtils.cpp
tests/: CMakeLists.txt  MANUAL_TESTING.md  main.cpp
tests/core/: TestAppStorage.cpp  TestImportedFileValidator.cpp  TestLibraryUpdate.cpp  TestLibraryUpdateController.cpp  TestOmdbSearch.cpp  TestSeasonUpdate.cpp  TestSeasonUpdateController.cpp
tests/ui/: TestHelpDialog.cpp  TestLibraryView.cpp  TestMainWindow.cpp  TestRankingView.cpp  TestSearchResults.cpp  TestSettingsWindow.cpp  TestTitleCard.cpp  TestTitleDetailView.cpp
tests/ui/bars/: TestAppMenuBar.cpp  TestTopBar.cpp
tests/ui/misc/: TestAddStreamingPlatformDialog.cpp
